--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ textarea {
 
 body{
     line-height: 1.7;
+    overflow-x: hidden;
 }
 
 h1, h2, h3{
